examples/test/testpolicy11699.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11699
  namespace: namespace68
spec:
  podSelector:
    matchLabels:
      key23: value7
      key46: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value25
      podSelector:
        matchLabels:
          key6: value43
          key42: value22
